2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm
	* t/make_helper.t: Add
	Glib::MakeHelper::get_configure_requires_yaml to generate YAML
	suitable for use with EU::MM's EXTRA_META.

2007-09-24	kaffeetisch

	* CodeGen.pm
	* GenPod.pm
	* MakeHelper.pm
	* Makefile.PL: Prettify build output by summarizing what is done
	instead of printing executed command lines, and by removing
	unnecessarily verbose output.  Use `make NOECHO=" "´ if you want
	to see the command lines.

	* MakeHelper.pm: Implement custom Makefile rule generators in MY
	that print stuff like [ XS File.xs ] instead of the overly long
	command lines.  Again, use `make NOECHO=" "´ if you want to see
	the command lines.

2007-09-16	kaffeetisch

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.160.

2007-09-15	kaffeetisch

	* GKeyFile.xs
	* GMainLoop.xs
	* GUtils.xs
	* gperl.h
	* t/1.t
	* t/9.t
	* t/g.t: Change version checks to refer to glib 2.14 instead of
	2.13.

2007-08-13	kaffeetisch

	* Glib.pm
	* NEWS
	* README: Unstable release 1.153.

2007-08-13	kaffeetisch

	* GMainLoop.xs
	* GObject.xs
	* GType.xs
	* GenPod.pm: Output a warning if a type name isn't recognized by
	the doc parser.  Add 'package' and 'list' to the basic types and
	fix the remaining type name issues the new warning uncovered.

	* GenPod.pm
	* ParseXSDoc.pm: Parse preprocessor conditionals in the XS code to
	add Since: tags to methods' POD.

	* GenPod.pm
	* ParseXSDoc.pm: Make it possible to document specific packages in
	different POD files by providing a new =for object variant.

	* t/1.t
	* t/9.t
	* t/filename.t: Fix win32 test failures.

2007-08-01	kaffeetisch

	* gperl.h
	* typemap: Add char_own_ornull and gchar_own_ornull typemaps.

2007-07-08	kaffeetisch

	* Glib.pm
	* NEWS
	* README: Unstable release 1.152.

2007-07-07	kaffeetisch

	* GObject.xs: Register G_TYPE_INTERFACES as Glib::Interfaces to
	avoid having it appear under Glib::Object::_Unregistered in
	hierarchies in the generated POD.
