@@ -134,6 +134,11 @@ $glib->save_config ('build/IFiles.pm');
 our @exports;
 require 'Glib.exports';
 
+my $configure_requires =
+  Glib::MakeHelper->get_configure_requires_yaml(%PREREQ_PM);
+
+my $no_index_xs = "- " . join "\n  - ", @xs_files;
+
 WriteMakefile(
     NAME		=> 'Glib',
     VERSION_FROM	=> 'Glib.pm', # finds $VERSION
@@ -143,7 +148,18 @@ WriteMakefile(
     MAN3PODS		=> $glib ? \%pod_files : {},
     FUNCLIST		=> \@exports,
     DL_FUNCS		=> { Glib => [] },
+
     $glib ? $glib->get_makefile_vars : (),
+
+    EXTRA_META    => qq/
+$configure_requires
+no_index:
+    package:
+    - MY
+    file:
+    - xsapi.pod.foot
+    $no_index_xs
+/,
 );
 
 =unstable
